186: Added a playlist endpoint to rename a playlist.
