# backend/api_docs.yaml
@@ -2640,6 +2640,73 @@ paths:
               message:
                 type: "string"
                 example: "MySQL unavailable."
+    patch:
+      tags:
+      - "audio"
+      summary: "Rename a playlist"
+      description: "Rename one of your existing playlists."
+      produces:
+      - "application/json"
+      parameters:
+        - in: "header"
+          name: "Authorization Header"
+          description: "This is where you should set your access_token."
+          required: true
+          type: "string"
+        - in: "body"
+          name: "body"
+          description: "Send the new name of the playlist & the pid"
+          required: true
+          schema:
+            type: "object"
+            properties:
+              title:
+                type: "string"
+                example: "A great playlist"
+              pid:
+                type: "integer"
+                example: 1
+      responses:
+        200:
+          description: "Playlist Renamed"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Playlist renamed"
+        401:
+          description: "Access_token missing or expired."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Request missing access_token."
+        422:
+          description: "Malformed request body."
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "A req validation traceback will be here."
+        500:
+          description: "Server error"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "Server failed to decode token."
+        503:
+          description: "Server is unavailable"
+          schema:
+            type: "object"
+            properties:
+              message:
+                type: "string"
+                example: "MySQL unavailable"
                 
   /audio/playlist_songs:
     post:
